# LaLiga-Project

./: README.md  pyproject.toml  requirements.txt
notebooks/: LaLigaDataAnalysis.ipynb  ModelAnalysis.ipynb
reports/: LaLigaDataAnalysis.html  ModelAnalysis.html
src/quiniela/: cli.py  io.py  models.py  settings.py
src/quiniela.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
