[project]
name = "quiniela"
version = "0.1.0"
description = "LaLiga ML predictor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.3.3",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "category-encoders>=2.6",
  "xlsxwriter>=3.2",
  "ipykernel>=6.31.0",
  "jupyter>=1.1.1",
  "matplotlib>=3.9.4",
  "nbconvert>=7.16.6",
  "notebook>=7.4.7",
  "openpyxl>=3.1.5",
  "seaborn>=0.13.2",
  "jinja2>=3.1.6",
  "xgboost>=2.1.4",
  "tensorflow>=2.17.0",   
  "keras>=3.4.1",                 
  "visualkeras>=0.0.2",  
  "pillow>=10.0.0",     
  "graphviz>=0.20.0",    
  "pydot>=1.4.2"         
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
quiniela = "quiniela.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

